# tide-basic-crud

./: .gitignore  Cargo.toml  client.http  docker-compose.yml  sqlx-data.json
.github/workflows/: ci.yml
public/css/: custom.css
public/js/: api.js
sql/: up.sql
src/: main.rs
src/controllers/: animal.rs  mod.rs  views.rs
src/handlers/: animal.rs  mod.rs
templates/: form.html  index.html  layout.html
tests/: schema.sql
