[package]
name = "tide-basic-crud"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-std = { version = "1.9.0", features = ["attributes"] }
chrono = "0.4"
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.64"
sqlx = { version = "0.5", features = ["runtime-async-std-native-tls", "macros", "chrono", "json", "postgres", "uuid"] }
tide = "0.16.0"
uuid = { version = "0.8", features = ["v4", "serde"] }
